# my_favorite_nightmare

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  justfile
.cargo/: config.toml
assets/maps/: bridge.map  hall.map  start.map  street.map  test.map  womb.map
devlog/: 2026-02-07.md  2026-02-08.md  2026-02-10.md  2026-02-12.md
src/: fonts.rs  main.rs  sprites.rs  text_parse.rs  ui.rs
